@@ -1,6 +1,9 @@
 package com.ait.app.ServiceImpl;
 
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -10,172 +13,201 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import com.ait.app.Service.MenuItemService;
-import com.ait.app.controller.MenuItemController;
 import com.ait.app.customExceptionHandler.RestaurantException;
+import com.ait.app.model.Category;
 import com.ait.app.model.MenuItem;
 import com.ait.app.model.Restaurant;
 import com.ait.app.model.User;
+import com.ait.app.repository.CategoryRepository;
 import com.ait.app.repository.MenuItemRepository;
 import com.ait.app.repository.RestaurantRepo;
 import com.ait.app.requestBody.MenuItemDto;
 import com.ait.app.requestBody.PriceResponseDto;
+import com.ait.app.response.MenuItemResponse;
+import com.ait.app.response.MenuResponse;
 
 @Service
 public class MenuItemServiceImpl implements MenuItemService {
 
-	@Autowired
-	private MenuItemRepository menuItemRepository;
+    @Autowired
+    private MenuItemRepository menuItemRepository;
+
+    @Autowired
+    private RestaurantRepo restaurantRepo;
 
 	@Autowired
-	private RestaurantRepo restaurantRepo;
+	CategoryRepository categoryrepo;
 
 	@Override
 	public ResponseEntity<MenuItem> addMenuItem(int restaurantId, MenuItemDto menuItemDto) {
 
-		if (menuItemDto.getName() == null || menuItemDto.getName().isBlank()) {
-			throw new RestaurantException("Name is required", HttpStatus.BAD_REQUEST);
-		}
+        if (menuItemDto.getName() == null || menuItemDto.getName().trim().isEmpty()) {
+            throw new RestaurantException("Name is required", HttpStatus.BAD_REQUEST);
+        }
 
-		if (menuItemDto.getDescription() == null || menuItemDto.getDescription().isBlank()) {
-			throw new RestaurantException("Description is required", HttpStatus.BAD_REQUEST);
-		}
+        if (menuItemDto.getDescription() == null
+                || menuItemDto.getDescription().trim().isEmpty()) {
+            throw new RestaurantException("Description is required", HttpStatus.BAD_REQUEST);
+        }
 
-		if (menuItemDto.getPrice() <= 0) {
-			throw new RestaurantException("Price must be greater than 0", HttpStatus.BAD_REQUEST);
-		}
+        if (menuItemDto.getPrice() <= 0) {
+            throw new RestaurantException("Price must be greater than 0", HttpStatus.BAD_REQUEST);
+        }
 
-		if (menuItemDto.getCategory() == null || menuItemDto.getCategory().isBlank()) {
+		if (menuItemDto.getCategoryId() <= 0) {
 			throw new RestaurantException("Category is required", HttpStatus.BAD_REQUEST);
 		}
 
+		Optional<Category> optionalCategory = categoryrepo.findById(menuItemDto.getCategoryId());
+
+		if (optionalCategory.isEmpty()) {
+			throw new RestaurantException("Category not found", HttpStatus.NOT_FOUND);
+		}
+
+		Category category = optionalCategory.get();
+
 		Optional<Restaurant> optionalRestaurant = restaurantRepo.findById(restaurantId);
 
-       
-		if (optionalRestaurant.isEmpty()) {
-			throw new RestaurantException("Restaurant not found", HttpStatus.NOT_FOUND);
-		}
+        if (optionalRestaurant.isEmpty()) {
+            throw new RestaurantException("Restaurant not found", HttpStatus.NOT_FOUND);
+        }
 
-		Restaurant restaurant = optionalRestaurant.get();
+        Restaurant restaurant = optionalRestaurant.get();
 
-		User user = restaurant.getUser();
+        User user = restaurant.getUser();
 
-		if (user == null) {
-			throw new RestaurantException("No user is linked with this restaurant", HttpStatus.UNAUTHORIZED);
-		}
+        if (user == null) {
+            throw new RestaurantException(
+                    "No user is linked with this restaurant",
+                    HttpStatus.UNAUTHORIZED);
+        }
 
-		// if (!"ADMIN".equalsIgnoreCase(user.getRole())) {
-		// 	throw new RestaurantException("Only restaurant admin can add menu items", HttpStatus.FORBIDDEN);
-		// }
+        if (menuItemRepository.existsByRestaurantIdAndName(
+                restaurantId, menuItemDto.getName())) {
+		
 
-		if (menuItemRepository.existsByRestaurantIdAndName(restaurantId, menuItemDto.getName())) {
+            throw new RestaurantException(
+                    "Menu item with this name already exists for this restaurant",
+                    HttpStatus.CONFLICT);
+        }
 
-			throw new RestaurantException("Menu item with this name already exists for this restaurant",
-					HttpStatus.CONFLICT);
-		}
+        MenuItem menuItem = new MenuItem();
 
-		MenuItem menuItem = new MenuItem();
+        menuItem.setName(menuItemDto.getName());
+        menuItem.setDescription(menuItemDto.getDescription());
+        menuItem.setPrice(menuItemDto.getPrice());
+        menuItem.setAvailability(menuItemDto.isAvailability());
+        menuItem.setCategory(menuItemDto.getCategory());
+        menuItem.setRestaurant(restaurant);
 
 		menuItem.setName(menuItemDto.getName());
 		menuItem.setDescription(menuItemDto.getDescription());
 		menuItem.setPrice(menuItemDto.getPrice());
 		menuItem.setAvailability(menuItemDto.isAvailability());
-		menuItem.setCategory(menuItemDto.getCategory());
+		menuItem.setCategory(category);
 		menuItem.setRestaurant(restaurant);
+        MenuItem savedItem = menuItemRepository.save(menuItem);
 
-		MenuItem savedItem = menuItemRepository.save(menuItem);
+        return ResponseEntity.status(HttpStatus.CREATED).body(savedItem);
+    }
 
-		return ResponseEntity.status(HttpStatus.CREATED).body(savedItem);
-	}
+    @Override
+    public ResponseEntity updateMenuItem(int itemId, MenuItemDto menuItemDto) {
 
-	@Override
-	public ResponseEntity updateMenuItem(int itemId, MenuItemDto menuItemDto) {
+        Optional<MenuItem> optionalMenuItem = menuItemRepository.findById(itemId);
 
-		Optional<MenuItem> optionalMenuItem = menuItemRepository.findById(itemId);
+        if (optionalMenuItem.isEmpty()) {
+            throw new RestaurantException(
+                    "Menu item not found",
+                    HttpStatus.NOT_FOUND);
+        }
 
-		if (optionalMenuItem.isEmpty()) {
+        MenuItem menuItem = optionalMenuItem.get();
 
+        if (menuItemDto.getPrice() > 0) {
+            menuItem.setPrice(menuItemDto.getPrice());
+        }
+
+        if (menuItemDto.getDescription() != null) {
+            menuItem.setDescription(menuItemDto.getDescription());
+        }
+
+        if (menuItemDto.isAvailability()) {
+            menuItem.setAvailability(true);
+        } else {
+            menuItem.setAvailability(false);
+        }
+
+        MenuItem updatedItem = menuItemRepository.save(menuItem);
+
+        return ResponseEntity.status(HttpStatus.OK).body(updatedItem);
+    }
+
+		if (menuItemDto.isAvailability() == true) {
+			menuItem.setAvailability(true);
+		} else {
+			menuItem.setAvailability(false);
+		}
+
+		MenuItem updatedItem = menuItemRepository.save(menuItem);
+    @Override
+    public ResponseEntity deleteMenuItem(int itemId, int userId) {
+
+        Optional<MenuItem> optional = menuItemRepository.findById(itemId);
+
+	public ResponseEntity deleteMenuItem(int itemId, int userId) {
+
+		Optional<MenuItem> optional = menuItemRepository.findById(itemId);
+
+		if (optional.isEmpty()) {
 			throw new RestaurantException("Menu item not found", HttpStatus.NOT_FOUND);
 		}
 
-		MenuItem menuItem = optionalMenuItem.get();
+		MenuItem item = optional.get();
 
-		if (menuItemDto.getPrice() > 0) {
-			menuItem.setPrice(menuItemDto.getPrice());
+		Restaurant restaurant = item.getRestaurant();
+
+		if (restaurant.getUser().getId() != userId) {
+			throw new RestaurantException("You are not authorized to delete this item", HttpStatus.UNAUTHORIZED);
 		}
 
-		if (menuItemDto.getDescription() != null) {
+		item.setActive(false);
+		menuItemRepository.save(item);
 
-			menuItem.setDescription(menuItemDto.getDescription());
-		}
-
-		if (menuItemDto.isAvailability() == true) {
-		    menuItem.setAvailability(true);
-		} 
-		else {
-		    menuItem.setAvailability(false);
-		}
-		
-		MenuItem updatedItem = menuItemRepository.save(menuItem);
-
-		return ResponseEntity.status(HttpStatus.OK).body(updatedItem);
+		return new ResponseEntity<>(HttpStatus.NO_CONTENT);
 	}
 
-public ResponseEntity deleteMenuItem(int itemId, int userId) {
-		
-		  Optional<MenuItem> optional = menuItemRepository.findById(itemId);
-
-		    if (optional.isEmpty()) {
-		        throw new RestaurantException("Menu item not found", HttpStatus.NOT_FOUND);
-		    }
-
-		    MenuItem item = optional.get();
-
-		    Restaurant restaurant = item.getRestaurant();
-
-		    if (restaurant.getUser().getId() != userId) {
-		        throw new RestaurantException("You are not authorized to delete this item", HttpStatus.UNAUTHORIZED);
-		    }
-
-		    item.setActive(false);
-		    menuItemRepository.save(item);
-
-		    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-		}
-		
-		
-		@Override
+	@Override
 	public ResponseEntity getItemDetails(int itemId) {
-		
-		  Optional<MenuItem> menuItem =menuItemRepository.findById(itemId);
-		if(menuItem.isEmpty()) {
-		  throw new RestaurantException("this item is not available ", HttpStatus.NOT_FOUND);
+
+		Optional<MenuItem> menuItem = menuItemRepository.findById(itemId);
+		if (menuItem.isEmpty()) {
+			throw new RestaurantException("this item is not available ", HttpStatus.NOT_FOUND);
 		}
-		
-		if(!menuItem.get().isAvailability()) {
+
+		if (!menuItem.get().isAvailability()) {
 			throw new RestaurantException("this item is not available right now ", HttpStatus.FOUND);
 		}
-		
+
 		try {
-			PriceResponseDto priceDto=new PriceResponseDto();
-			
+			PriceResponseDto priceDto = new PriceResponseDto();
+
 			priceDto.setItemId(itemId);
 			priceDto.setPrice(menuItem.get().getPrice());
-			
-			String description =menuItem.get().getDescription();
-			
-			Map priceResponse =new HashMap<>();
+
+			String description = menuItem.get().getDescription();
+
+			Map priceResponse = new HashMap<>();
 			priceResponse.put("priceDto", priceDto);
 			priceResponse.put("description", description);
-			
+
 			return ResponseEntity.status(HttpStatus.FOUND).body(priceResponse);
-			
-			
+
 		} catch (Exception e) {
-			throw new RestaurantException("There is an internal issue for getting item price ", HttpStatus.INTERNAL_SERVER_ERROR);
+			throw new RestaurantException("There is an internal issue for getting item price ",
+					HttpStatus.INTERNAL_SERVER_ERROR);
 		}
-		
+
 	}
 
-
-	
 }
